--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Mini Cinema</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="cinema:collection_source" content="https://en.btdig.com/c9c47e7b12586a59d83e3e519570835625d44b3e/werner-herzog">
   <style>
     :root {
       color-scheme: dark;
@@ -430,6 +431,7 @@
     <footer>
       <span>Replace the mock catalog with your Nostr-backed bib when ready.</span>
       <span>Open this file directly or via any static server.</span>
+      <span>Collection metadata source: <a href="https://en.btdig.com/c9c47e7b12586a59d83e3e519570835625d44b3e/werner-herzog">Werner Herzog torrent</a>.</span>
     </footer>
   </div>
 
