--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-cinema
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,13 +8,13 @@ cinema
   <style>
     :root {
       color-scheme: dark;
-      --bg: #050509;
-      --bg-alt: #101018;
-      --accent: #ff4b6e;
-      --accent-soft: rgba(255, 75, 110, 0.16);
-      --text: #f5f5f7;
-      --muted: #a0a0b5;
-      --border: #242437;
+      --bg: #050608;
+      --bg-alt: #111219;
+      --accent: #e0c680;
+      --accent-soft: rgba(224, 198, 128, 0.14);
+      --text: #f3f3f5;
+      --muted: #a3a3b5;
+      --border: #252637;
       --radius: 10px;
     }
 
@@ -29,7 +26,7 @@ cinema
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
         "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #19192b 0, #050509 55%);
+      background: var(--bg);
       color: var(--text);
       min-height: 100vh;
       display: flex;
@@ -66,8 +63,8 @@ cinema
       width: 16px;
       height: 16px;
       border-radius: 999px;
-      background: radial-gradient(circle at 30% 30%, #fff, #ffb3c2 40%, #ff4b6e);
-      box-shadow: 0 0 0 4px rgba(255, 75, 110, 0.25);
+      background: #e2e2ea;
+      box-shadow: none;
     }
 
     .subtitle {
@@ -83,12 +80,12 @@ cinema
     }
 
     .panel {
-      background: linear-gradient(145deg, #101018 0, #050509 70%);
+      background: var(--bg-alt);
       border-radius: var(--radius);
       border: 1px solid var(--border);
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.45);
+      box-shadow: none;
       padding: 12px 12px 14px;
-      backdrop-filter: blur(16px);
+      backdrop-filter: none;
     }
 
     .player-panel {
@@ -99,9 +96,9 @@ cinema
       position: relative;
       border-radius: calc(var(--radius) - 2px);
       overflow: hidden;
-      background: radial-gradient(circle at top, #1b1b2b, #050509);
-      border: 1px solid rgba(255, 255, 255, 0.04);
-      box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.35);
+      background: #151621;
+      border: 1px solid rgba(255, 255, 255, 0.06);
+      box-shadow: none;
       aspect-ratio: 16 / 9;
     }
 
@@ -109,7 +106,7 @@ cinema
       width: 100%;
       height: 100%;
       display: block;
-      background: radial-gradient(circle at 30% 20%, #33334f, #050509 65%);
+      background: #050608;
     }
 
     .player-overlay {
@@ -124,11 +121,11 @@ cinema
     .player-overlay-badge {
       padding: 6px 12px;
       border-radius: 999px;
-      background: rgba(0, 0, 0, 0.45);
-      border: 1px solid rgba(255, 255, 255, 0.14);
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       font-size: 11px;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
+      letter-spacing: 0.06em;
+      text-transform: none;
       color: var(--muted);
     }
 
@@ -142,8 +139,8 @@ cinema
 
     .panel-title {
       font-size: 13px;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
+      text-transform: none;
+      letter-spacing: 0.04em;
       color: var(--muted);
     }
 
@@ -153,9 +150,9 @@ cinema
       border-radius: 999px;
       background: var(--accent-soft);
       color: var(--accent);
-      border: 1px solid rgba(255, 75, 110, 0.4);
-      text-transform: uppercase;
-      letter-spacing: 0.11em;
+      border: 1px solid rgba(224, 198, 128, 0.35);
+      text-transform: none;
+      letter-spacing: 0.06em;
     }
 
     .library-list {
@@ -177,21 +174,19 @@ cinema
       border: 1px solid transparent;
       background: transparent;
       cursor: pointer;
-      transition: background 120ms ease, border-color 120ms ease,
-        transform 120ms ease;
+      transition: background 120ms ease, border-color 120ms ease;
       text-align: left;
       color: inherit;
     }
 
     .movie:hover {
-      background: rgba(255, 255, 255, 0.04);
-      border-color: rgba(255, 255, 255, 0.06);
-      transform: translateY(-1px);
+      background: rgba(255, 255, 255, 0.03);
+      border-color: rgba(255, 255, 255, 0.04);
     }
 
     .movie.is-active {
-      background: linear-gradient(135deg, rgba(255, 75, 110, 0.16), transparent);
-      border-color: rgba(255, 75, 110, 0.7);
+      background: rgba(224, 198, 128, 0.12);
+      border-color: rgba(224, 198, 128, 0.65);
     }
 
     .movie-thumb {
@@ -199,7 +194,7 @@ cinema
       height: 40px;
       border-radius: 8px;
       flex-shrink: 0;
-      background: radial-gradient(circle at 30% 20%, #ffc8d5, #ff4b6e);
+      background: #1b1b24;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -251,8 +246,8 @@ cinema
     .badge-soft {
       padding: 2px 6px;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.08);
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.06);
       font-size: 11px;
       color: var(--muted);
     }
@@ -277,8 +272,8 @@ cinema
     .status-label {
       font-size: 11px;
       color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
+      text-transform: none;
+      letter-spacing: 0.06em;
     }
 
     .status-value {
@@ -304,8 +299,8 @@ cinema
       width: 8px;
       height: 8px;
       border-radius: 999px;
-      background: #2f6f3a;
-      box-shadow: 0 0 0 4px rgba(71, 190, 104, 0.18);
+      background: #5a8f63;
+      box-shadow: none;
       margin-right: 4px;
     }
 
@@ -317,6 +312,15 @@ cinema
 
     .status-caption-right {
       font-variant-numeric: tabular-nums;
+    }
+
+    .infohash {
+      margin-top: 6px;
+      font-size: 11px;
+      color: var(--muted);
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+        "Liberation Mono", "Courier New", monospace;
+      word-break: break-all;
     }
 
     footer {
@@ -428,6 +432,9 @@ cinema
           WebTorrent client in browser
         </div>
         <div class="status-caption-right" id="status-extra">Hash-only mock data</div>
+      </div>
+      <div class="infohash">
+        Infohash: c9c47e7b12586a59d83e3e519570835625d44b3e
       </div>
     </section>
 
