--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
           <span class="title-mark"></span>
           Mini Cinema
         </div>
-        <div class="subtitle">Browser WebTorrent player · mock catalog</div>
+        <div class="subtitle">POC0 · WebTorrent Herzog mini archive</div>
       </div>
       <span class="chip">One Page Prototype</span>
     </header>
@@ -512,6 +512,17 @@
         <button class="client-button" id="client-load">Load torrent</button>
         <span class="client-note">Uses a browser WebTorrent client; knowledge of the hash is optional.</span>
       </div>
+    </section>
+
+    <section class="panel">
+      <div class="panel-header">
+        <div class="panel-title">About this POC</div>
+      </div>
+      <p style="margin: 0; font-size: 12px; color: var(--muted);">
+        POC0 is a single-page, browser-based WebTorrent viewer for the “Werner Herzog Collection”
+        infohash. It exposes the collection hash and a simple client so future iterations can
+        plug in a Nostr-backed bibliography instead of the built-in magnet.
+      </p>
     </section>
 
     <footer>
@@ -830,6 +841,14 @@
 
       if (magnetInput) {
         magnetInput.value = COLLECTION_MAGNET;
+        magnetInput.addEventListener("keydown", (event) => {
+          if (event.key === "Enter") {
+            event.preventDefault();
+            if (loadButton) {
+              loadButton.click();
+            }
+          }
+        });
       }
 
       if (loadButton) {
