--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
   <script>
     const COLLECTION_INFOHASH = "c9c47e7b12586a59d83e3e519570835625d44b3e";
     const COLLECTION_LABEL = "Werner Herzog Collection";
-    const NOSTR_RELAY = ""; // fill with e.g. wss://nostr.example.com
+    const NOSTR_RELAY = "wss://relay.0x6d.net";
     const NOSTR_PRESETS_KIND = 30100;
     const NOSTR_PRESETS_D = "herzog-docs-presets";
     const MAGNET_TRACKERS =
