--- a/index.html
+++ b/index.html
@@ -870,28 +870,6 @@
           presetsEl.appendChild(li);
         }
 
-        function loadFromHashesTxt() {
-          fetch("hashes.txt")
-            .then((response) => (response.ok ? response.text() : ""))
-            .then((text) => {
-              if (!text) return;
-
-              const lines = text.split("\n");
-              lines.forEach((line) => {
-                const trimmed = line.trim();
-                if (!trimmed) return;
-                const parts = trimmed.split(/\s+/, 2);
-                if (!parts[0] || parts[0].length !== 40) return;
-                const hash = parts[0];
-                const label = parts[1] || hash;
-                addPreset(hash, label);
-              });
-            })
-            .catch(() => {
-              // ignore preset load errors for POC0
-            });
-        }
-
         function loadFromNostr() {
           if (!NOSTR_RELAY || typeof WebSocket === "undefined") {
             return Promise.resolve(false);
@@ -973,11 +951,7 @@
           });
         }
 
-        loadFromNostr().then((ok) => {
-          if (!ok) {
-            loadFromHashesTxt();
-          }
-        });
+        loadFromNostr();
       }
 
       updateStatusIdle();
