--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Mini Cinema</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="cinema:collection_source" content="https://en.btdig.com/c9c47e7b12586a59d83e3e519570835625d44b3e/werner-herzog">
+  <meta name="cinema:version" content="POC0.1">
   <style>
     :root {
       color-scheme: dark;
@@ -458,7 +459,7 @@
         </div>
         <div class="subtitle">POC0 · WebTorrent Herzog mini archive</div>
       </div>
-      <span class="chip">One Page Prototype</span>
+      <span class="chip">POC0.1</span>
     </header>
 
     <main class="layout">
