--- a/index.html
+++ b/index.html
@@ -773,6 +773,131 @@
         });
       }
 
+      function loadFilmFromHash(infohash, title, movieId) {
+        const c = ensureClient();
+        if (!c) return;
+
+        const cleanHash = (infohash || "").trim();
+        if (!/^[0-9a-fA-F]{40}$/.test(cleanHash)) {
+          updateStatusError("Invalid infohash for " + (title || "film"));
+          return;
+        }
+
+        if (activeTorrent) {
+          try {
+            activeTorrent.destroy();
+          } catch (e) {
+            // ignore
+          }
+          activeTorrent = null;
+        }
+
+        if (statusInterval) {
+          clearInterval(statusInterval);
+          statusInterval = null;
+        }
+
+        if (movieId) {
+          setActiveMovieElement(movieId);
+        } else {
+          setActiveMovieElement(null);
+        }
+
+        const label = title || cleanHash;
+        updateStatusLoading({ title: label, id: cleanHash });
+        overlayBadge.textContent = "Connecting to swarm…";
+
+        const magnet =
+          "magnet:?xt=urn:btih:" +
+          cleanHash +
+          "&dn=" +
+          encodeURIComponent(label) +
+          MAGNET_TRACKERS;
+
+        c.add(magnet, (torrent) => {
+          activeTorrent = torrent;
+
+          const videoPattern = /\.(mp4|m4v|webm|mkv|avi|mov)$/i;
+          const file =
+            torrent.files.find((f) =>
+              videoPattern.test(f.name || f.path || "")
+            ) || torrent.files[0];
+
+          if (!file) {
+            updateStatusError("No playable video file in torrent");
+            overlayBadge.textContent = "Nothing playable found in torrent";
+            return;
+          }
+
+          file.renderTo(videoEl, { autoplay: true }, (err) => {
+            if (err) {
+              updateStatusError("Render failed: " + err.message);
+            }
+          });
+
+          overlayBadge.textContent = "";
+
+          updateStatusFromTorrent(torrent);
+          statusInterval = setInterval(() => {
+            if (!activeTorrent) return;
+            updateStatusFromTorrent(activeTorrent);
+          }, 1000);
+
+          torrent.on("error", (err) => {
+            updateStatusError(err.message || "Torrent error");
+          });
+        });
+      }
+
+      function loadFilmLibrary() {
+        fetch("hashes.txt")
+          .then((response) => (response.ok ? response.text() : ""))
+          .then((text) => {
+            if (!text) return;
+
+            const items = [];
+            text.split("\n").forEach((line) => {
+              const trimmed = line.trim();
+              if (!trimmed) return;
+              const firstSpace = trimmed.indexOf(" ");
+              const hash =
+                firstSpace === -1 ? trimmed : trimmed.slice(0, firstSpace);
+              const title =
+                firstSpace === -1
+                  ? trimmed
+                  : trimmed.slice(firstSpace + 1).trim();
+              if (!/^[0-9a-fA-F]{40}$/.test(hash)) return;
+              items.push({ hash, title });
+            });
+
+            if (!items.length) return;
+
+            listEl.innerHTML = "";
+            countEl.textContent = items.length + " films";
+
+            items.forEach((item, index) => {
+              const movie = {
+                id:
+                  "film-" +
+                  String(index + 1)
+                    .toString()
+                    .padStart(2, "0"),
+                title: item.title,
+                sizeBytes: 0,
+                tags: ["herzog"],
+              };
+              const node = createMovieElement(movie);
+              node.addEventListener("click", () => {
+                loadFilmFromHash(item.hash, item.title, movie.id);
+              });
+              listEl.appendChild(node);
+            });
+          })
+          .catch(() => {
+            // leave library empty if hashes.txt not available
+          });
+      }
+
       function findDefaultIndex(catalog) {
         const needle = DEFAULT_FILE_MATCH.toLowerCase();
         for (let i = 0; i < catalog.length; i += 1) {
@@ -956,27 +1081,7 @@
       }
 
       updateStatusIdle();
-      overlayBadge.textContent = "Loading Herzog collection…";
-
-      const c = ensureClient();
-      if (!c) return;
-
-      updateStatusLoading({ title: COLLECTION_LABEL, id: "collection" });
-
-      c.add(COLLECTION_MAGNET, (torrent) => {
-        activeTorrent = torrent;
-        const catalog = buildCatalogFromTorrent(torrent);
-        if (!catalog.length) {
-          document.getElementById("status-extra").textContent =
-            "No playable video files in collection";
-          overlayBadge.textContent = "Nothing playable found in torrent";
-          return;
-        }
-        renderCatalog(catalog, torrent);
-        document.getElementById("status-extra").textContent =
-          "Herzog collection loaded (" + catalog.length + " files)";
-        overlayBadge.textContent = "Select a title to start";
-      });
+      overlayBadge.textContent = "Select a film or enter an infohash…";
 
       if (magnetInput) {
         magnetInput.value = COLLECTION_MAGNET;
