--- a/index.html
+++ b/index.html
@@ -574,10 +574,7 @@
     const NOSTR_PRESETS_KIND = 30317;
     const NOSTR_PRESETS_D = "herzog-docs-presets";
     const MAGNET_TRACKERS =
-      "&tr=wss%3A%2F%2Ftracker.openwebtorrent.com" +
-      "&tr=wss%3A%2F%2Ftracker.webtorrent.dev" +
-      "&tr=wss%3A%2F%2Ftracker.btorrent.xyz" +
-      "&tr=wss%3A%2F%2Ftracker.fastcast.nz";
+      "&tr=wss%3A%2F%2Ftracker.0x6d.net";
     const COLLECTION_MAGNET =
       "magnet:?xt=urn:btih:" +
       COLLECTION_INFOHASH +
