--- a/index.html
+++ b/index.html
@@ -533,11 +533,8 @@
       <div class="infohash">
         Infohash: c9c47e7b12586a59d83e3e519570835625d44b3e
       </div>
-    </section>
-
-    <section class="panel">
-      <div class="panel-header">
-        <div class="panel-title">WebTorrent Client</div>
+      <div class="client-row" style="margin-top: 10px;">
+        <div class="client-label">Client controls</div>
       </div>
       <div class="client-row">
         <label class="client-label" for="magnet-input">Magnet URL or infohash</label>
