--- a/index.html
+++ b/index.html
@@ -537,19 +537,6 @@
         <div class="client-label">Client controls</div>
       </div>
       <div class="client-row">
-        <label class="client-label" for="magnet-input">Magnet URL or infohash</label>
-        <input
-          class="client-input"
-          id="magnet-input"
-          type="text"
-          placeholder="Leave empty for Herzog collection"
-        >
-      </div>
-      <div class="client-actions">
-        <button class="client-button" id="client-load">Load torrent</button>
-        <span class="client-note">Uses a browser WebTorrent client; knowledge of the hash is optional.</span>
-      </div>
-      <div class="client-row">
         <div class="client-label">Presets from Herzog archive</div>
         <ul class="client-presets" id="client-presets"></ul>
       </div>
@@ -748,8 +735,6 @@
       const countEl = document.getElementById("library-count");
       const overlayBadge = document.getElementById("player-overlay-badge");
       const videoEl = document.getElementById("player");
-      const magnetInput = document.getElementById("magnet-input");
-      const loadButton = document.getElementById("client-load");
 
       const presetsEl = document.getElementById("client-presets");
       const nostrStatusEl = document.getElementById("nostr-status");
@@ -772,26 +757,6 @@
           client = new WebTorrent();
         }
         return client;
-      }
-
-      function normalizeMagnet(raw) {
-        const value = (raw || "").trim();
-        if (!value) {
-          return COLLECTION_MAGNET;
-        }
-        if (value.startsWith("magnet:")) {
-          return value;
-        }
-        if (/^[0-9a-fA-F]{40}$/.test(value)) {
-          return (
-            "magnet:?xt=urn:btih:" +
-            value +
-            "&dn=" +
-            encodeURIComponent("Custom torrent") +
-            MAGNET_TRACKERS
-          );
-        }
-        return null;
       }
 
       function buildCatalogFromTorrent(torrent) {
@@ -1160,12 +1125,7 @@
           button.className = "client-preset";
           button.textContent = label || hash;
           button.addEventListener("click", () => {
-            if (magnetInput) {
-              magnetInput.value = hash;
-            }
-            if (loadButton) {
-              loadButton.click();
-            }
+            loadFilmFromHash(hash, label, null);
           });
           li.appendChild(button);
           presetsEl.appendChild(li);
@@ -1268,70 +1228,9 @@
       }
 
       updateStatusIdle();
-      overlayBadge.textContent = "Select a film or enter an infohash…";
+      overlayBadge.textContent = "Select a film…";
       setNostrStatus("Nostr presets: idle");
       loadFilmLibrary();
-
-      if (magnetInput) {
-        magnetInput.value = COLLECTION_MAGNET;
-        magnetInput.addEventListener("keydown", (event) => {
-          if (event.key === "Enter") {
-            event.preventDefault();
-            if (loadButton) {
-              loadButton.click();
-            }
-          }
-        });
-      }
-
-      if (loadButton) {
-        loadButton.addEventListener("click", () => {
-          const c2 = ensureClient();
-          if (!c2) return;
-
-          const magnet = normalizeMagnet(magnetInput ? magnetInput.value : "");
-          if (!magnet) {
-            updateStatusError("Enter a magnet URL or 40-character infohash");
-            return;
-          }
-
-          if (activeTorrent) {
-            try {
-              activeTorrent.destroy();
-            } catch (e) {
-              // ignore
-            }
-            activeTorrent = null;
-          }
-
-          if (statusInterval) {
-            clearInterval(statusInterval);
-            statusInterval = null;
-          }
-
-          setActiveMovieElement(null);
-          listEl.innerHTML = "";
-          countEl.textContent = "0 files";
-
-          overlayBadge.textContent = "Loading selected collection…";
-          updateStatusLoading({ title: "Custom collection", id: "custom" });
-
-          c2.add(magnet, (torrent) => {
-            activeTorrent = torrent;
-            const catalog = buildCatalogFromTorrent(torrent);
-            if (!catalog.length) {
-              document.getElementById("status-extra").textContent =
-                "No playable video files in collection";
-              overlayBadge.textContent = "Nothing playable found in torrent";
-              return;
-            }
-            renderCatalog(catalog, torrent);
-            document.getElementById("status-extra").textContent =
-              "Collection loaded (" + catalog.length + " files)";
-            overlayBadge.textContent = "Select a title to start";
-          });
-        });
-      }
 
       loadPresets();
     }
